--- a/examples/component-showcase/templates/showcase/data.html
+++ b/examples/component-showcase/templates/showcase/data.html
@@ -73,6 +73,7 @@
 <div id="data_table_content"
      hx-get="/data/table"
      hx-trigger="load"
+     hx-target="#data_table_content"
      hx-include="#data_filters"
      hx-swap="innerHTML transition:true">
   <div class="chirpui-table-wrap">
