--- a/examples/component-showcase/templates/showcase/social.html
+++ b/examples/component-showcase/templates/showcase/social.html
@@ -41,7 +41,6 @@
 {% end %}
 {% end %}
 {% end %}
-{% end %}
 
 <h2>Post Card</h2>
 {% call block() %}
@@ -62,7 +61,6 @@
 {{ action_bar_item(icon="↗", label="Share") }}
 {% end %}
 {{ share_menu(label="Share", share_url="https://example.com/post/1") }}
-{% end %}
 {% end %}
 {% end %}
 {% end %}
@@ -101,3 +99,4 @@
 <p><a href="/">← Back to index</a></p>
 {% end %}
 {% end %}
+{% endblock %}
